samples/_failures_safe/1761787225_377add_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a756757.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4a756757.c:162:16: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  162 |         tokens[token
      |                ^~~~~
      |                Token
./samples/SAFE/__tmp_4a756757.c:162:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4a756757.c:162:21: error: expected ‘]’ at end of input
  162 |         tokens[token
      |                     ^
      |                     ]
./samples/SAFE/__tmp_4a756757.c:162:9: error: expected declaration or statement at end of input
  162 |         tokens[token
      |         ^~~~~~
./samples/SAFE/__tmp_4a756757.c:162:9: error: expected declaration or statement at end of input
